--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Minha Pagina</title>
+        <title>@JULIODEV</title>
         <!-- STYLE -->
         <link rel="stylesheet" href="css/root.css">
         <link rel="stylesheet" href="css/style.css">
         <!-- END STYLE -->
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     </head>
 
     <body>
